@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         PANT
-version:      0.12
+version:      0.13
 version_from: PANT.pm
 installdirs:  site
 requires:
