@@ -1,4 +1,4 @@
-PANT version 0.12
+PANT version 0.13
 =================
 
 This is a set of useful functions to facilitate building packages in
