@@ -4,7 +4,8 @@
 #########################
 
 use File::Spec::Functions qw(:ALL);
-use Test::More tests => 15;
+use Test::More tests => 27;
+use Cwd;
 
 BEGIN { use_ok('PANT') };
 
@@ -33,8 +34,8 @@ ok(CallPant("subpant1.pl"), "Sub pant called");
 EndPant();
 my $contents = FileLoad($outfile);
 ok($contents, "Contents of $outfile read");
-like($contents, qr/href=\"[^\"]+\"/i, "Found the reference to the sub html");
-my($href) = $contents =~ /href=\"([^\"]+)\"/i; 
+like($contents, qr/href=\"[^\"]+\"/i, "Found the reference to the sub html"); #"
+my($href) = $contents =~ /href=\"([^\"]+)\"/i; #"
 ok(-f $href, "Sub pant file $href exists");
 push(@dellist, $href);
 my($v1,$d1, $f1) = splitpath(rel2abs($outfile));
@@ -57,23 +58,85 @@ EOF
 push(@dellist, "t/subpant2.pl");
 
 @ARGV = @testarg;
+
+
 StartPant("Subpant 2 test");
 push(@dellist, $outfile);
 ok(CallPant("subpant2.pl", directory=>"t"), "Subpant called ok");
 EndPant();
+
 $contents = FileLoad($outfile);
 ok($contents, "Contents of $outfile read");
-like($contents, qr/href=\"[^\"]+\"/i, "Found the reference to the sub html");
-($href) = $contents =~ /href=\"([^\"]+)\"/i; 
+like($contents, qr/href=\"[^\"]+\"/i, "Found the reference to the sub html"); #"
+($href) = $contents =~ /href=\"([^\"]+)\"/i;  #"
 push(@dellist, $href);
 ok(-f $href, "Sub pant file $href exists");
 ($v1,$d1, $f1) = splitpath(rel2abs($outfile));
 ($v2,$d2, $f2) = splitpath(rel2abs($href));
 cmp_ok($v1, 'eq', $v2, "Volumes $v1 + $v2 are the same");
 cmp_ok($d1, 'eq', $d2, "Directories $d1 + $d2 are different");
-ok(unlink(@dellist), "Clean up old files");
+ok(unlink(@dellist), "Clean up old files @dellist");
 @dellist = ();
 
+WriteFile("t/subpant3.pl", <<'EOF');
+#! perl -w
+BEGIN { unshift(@INC, ".."); }
+use PANT;
+
+StartPant("Subpant test");
+Phase(1);
+
+EndPant();
+EOF
+push(@dellist, "t/subpant3.pl");
+
+@ARGV = @testarg;
+StartPant("Subpant 3 test");
+push(@dellist, $outfile);
+my $testdir = catfile(getcwd(), "t");
+ok(CallPant("subpant3.pl", directory=>$testdir, logname=>"newlog"), "Subpant called ok");
+EndPant();
+$contents = FileLoad($outfile);
+ok($contents, "Contents of $outfile read");
+like($contents, qr/href=\"[^\"]+\"/i, "Found the reference to the sub html"); #"
+($href) = $contents =~ /href=\"([^\"]+)\"/i;  #"
+like($href, qr/newlog/, "Logfile $href contains newlog");
+push(@dellist, $href);
+ok(unlink(@dellist), "Clean up old files @dellist");
+@dellist = ();
+
+WriteFile("t/subpant4.pl", <<'EOF');
+#! perl -w
+BEGIN { unshift(@INC, ".."); }
+use PANT;
+
+StartPant("Subpant test");
+Phase(1);
+
+EndPant();
+EOF
+push(@dellist, "t/subpant4.pl");
+
+ok(mkdir("tempdir"), "Create temp log dir");
+$outfile = rel2abs("tempdir/build1.html");
+@ARGV = ("-output", $outfile);
+push(@dellist, $outfile);
+
+
+StartPant("Subpant 4 test");
+$testdir = catfile(getcwd(), "t");
+ok(CallPant("subpant4.pl", directory=>$testdir, logname=>"newlog"), "Subpant called ok");
+EndPant();
+$contents = FileLoad($outfile);
+ok($contents, "Contents of $outfile read");
+like($contents, qr/href=\"[^\"]+\"/i, "Found the reference to the sub html"); #"
+($href) = $contents =~ /href=\"([^\"]+)\"/i;  #"
+like($href, qr/newlog/, "Logfile $href contains newlog");
+push(@dellist, "tempdir/$href");
+
+ok(unlink(@dellist), "Clean up old files @dellist");
+@dellist = ();
+ok(rmdir("tempdir"), "Removed the temp directory");
 
 sub WriteFile {
 	my($name, $contents) = @_;
